# Semantic-Landscape-Sampler

./: .env.example  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  THIRD_PARTY_NOTICE.md  runStore.tmp.ts
backend/: pyproject.toml  requirements.txt
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  compare.py  run.py
backend/app/core/: __init__.py  config.py
backend/app/db/: __init__.py  session.py
backend/app/models/: __init__.py  ann_index.py  cluster.py  cluster_metrics.py  embedding.py  embedding_cache.py  projection.py  projection_cache.py  response.py  response_hull.py  run.py  run_pair.py  run_provenance.py  segment.py  segment_edge.py  segment_insight.py
backend/app/schemas/: __init__.py  compare.py  run.py
backend/app/services/: __init__.py  cluster_metrics.py  compare.py  openai_client.py  pricing.py  projection.py  runs.py  segmentation.py
backend/app/utils/: __init__.py  text.py  tokenization.py
backend/tests/: conftest.py  test_compare_service.py  test_export_endpoint.py  test_graph_and_metrics_endpoints.py  test_projection.py  test_runs_service.py
frontend/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.node.json  vite.config.js  vite.config.ts  vitest.config.ts
frontend/src/: App.d.ts  App.js  App.tsx  main.d.ts  main.js  main.tsx  styles.css
frontend/src/components/: ClusterLegend.d.ts  ClusterLegend.js  ClusterLegend.tsx  ClusterMetricsPanel.d.ts  ClusterMetricsPanel.js  (+42 more)
(+20 files in other folders)
